After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695834 - Fix compiler warnings
Fix compiler warnings
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
: 696942 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-03-14 10:28 UTC by Bastien Nocera
Modified: 2013-04-02 14:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compiler warnings (6.05 KB, patch)
2013-03-14 10:28 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-03-14 10:28:49 UTC
.
Comment 1 Bastien Nocera 2013-03-14 10:28:51 UTC
Created attachment 238855 [details] [review]
Fix compiler warnings

The AFP one I'm unsure about. I'd split those up before committing if
necessary.
Comment 2 Tomas Bzatek 2013-03-22 14:57:51 UTC
Review of attachment 238855 [details] [review]:

Looks good, thanks for preparing the patch. Please commit after freeze.

::: daemon/gvfsafpvolume.c
@@ -2712,2 @@
   /* ReqCount */
-  max_req_count = g_vfs_afp_server_get_max_request_size (volume->priv->server) - 20;

Looking at the code it's a simple struct value retrieval and it's safe to remove at the current state. Hopefully it stays that way in the future.
Comment 3 Bastien Nocera 2013-04-02 12:00:40 UTC
*** Bug 696942 has been marked as a duplicate of this bug. ***
Comment 4 Bastien Nocera 2013-04-02 14:05:40 UTC
Attachment 238855 [details] pushed as 421ce4a - Fix compiler warnings