Fix compiler warnings

https://bugzilla.gnome.org/show_bug.cgi?id=695834
(cherry picked from commit 421ce4a6b4526047fde9d8d039a66b520eb09f3f)